--- a/Models/SpeechLM/2024.12.13_CosyVoice2.md
+++ b/Models/SpeechLM/2024.12.13_CosyVoice2.md
@@ -169,6 +169,65 @@ In real-life scenarios, such as speaker fine-tuning (SFT) and in-context learnin
 - **SFT, Non-Streaming**: In the SFT scenario, the LM is fine-tuned on a specific speaker, and the prompt text and speech are no longer needed. Thus, the initial sequence is very simple: "\circled{**S**}, **text**, \circled{**T**}". Starting from this, the text-speech LM can generate speech tokens autoregressively until \circled{T}.
 - **SFT, Streaming**: In the streaming mode of SFT, we start the speech generation from the following sequence: "\circled{**S**}, **first\_N\_text**". Then, the LM will generate $M$ speech tokens, and we manually pad the next $N$ text tokens. We repeat the above process until all text tokens run out of, and then \circled{**T**} is added. Note that this mode can also be adopted by the speech-to-speech multi-modal large language models to obtain an extremely low latency.
 
+### Chunk-Aware Flow Matching Model: 分块感知流匹配模型
+
+In CosyVoice 2, we employ the Mel spectrogram as the acoustic feature with the frame rate of 50 Hz and the sampling rate of 24000. Due the frame-rate mismatch between speech tokens and Mel features, we up-sample the speech tokens with the ratio of two to match the frame rate of Mel spectrogram. Before the up-sampling operation, we add an additional look-ahead convolution layer to provide the future information for the following causal modules. The look-ahead layer is implemented by a right-padded 1-D convolution with the pad size of $P$ and the kernel size of $P+1$. After these, several chunk-aware causal Transformer blocks are followed to align the representation space of speech tokens to match acoustic features.
+
+Subsequently, our goal is to further decode the speech tokens into the Mel spectrogram specified by the speaker embedding and reference speech.
+To achieve this, we employ a conditional flow matching (CFM) model to sample the Mel spectrogram, given speech tokens, reference speech and speaker embedding as conditions.
+In the CFM model, the distribution of target Mel spectrogram is described by a probability density path from a prior distribution $p_0(X)$ and the data distribution $q(X)$. The probability density path can be defined by a time-dependent vector field.
+For sampling efficiency, we employ the optimal-transport (OT) flow to match the vector field $\omega_t$, which is given by an ordinary differential equation (ODE):
+
+$$
+\begin{aligned}
+	\omega_t(\phi^{OT}_t(X_0,X_1)|X_1)&=X_1-X_0 \\
+	\phi^{OT}_t(X_0,X_1)&=(1-t)X_0+tX_1 \\
+	X_0&\sim p_0(X)=\mathcal{N}(0,I) \\
+	X_1&\sim q(X)
+\end{aligned}
+$$
+
+A causal convolutional Transformer UNet is employed to learn the above ODE with the up-sampled token $\mu$, masked Mel spectrogram $\tilde{X}_1$, speaker embedding ([Github](https://github.com/alibaba-damo-academy/3D-Speaker/tree/main/egs/3dspeaker/sv-cam++)) $\mathbf{v}$ and timestep $t$ as the conditions:
+
+$$
+\begin{aligned}
+\nu_t(\phi^{OT}_t(X_0,X_1)|\theta) &= \mathrm{UNet}_\theta\left(\phi^{OT}_t(X_0,X_1),t;\mathbf{v},\{\mu\}_{1:L},\tilde{X_1}\right) \\
+\end{aligned}
+$$
+
+At the training stage, the masked Mel spectrogram is obtained by randomly masking out 70\% to 100\% of the final frames in $X_1$. As for the inference, it is provided by the Mel spectrogram extracted from the reference speech.
+By minimizing the L1 loss between the predicted and ground-truth ODE, we can optimize the UNet parameters $\theta$ as follows:
+
+$$
+\theta = \arg\min_{\theta}\mathbb{E}_{p_0(X),q(X),t}{\left|\omega_t(\phi^{OT}_t(X_0,X_1))-\nu_t(\phi^{OT}_t(X_0,X_1)|\theta;\mu,\tilde{X}_1,\mathbf{v})\right|_1}
+$$
+
+At the training stage, the timestep follows a uniform distribution $U[0, 1]$. However, during the inference, we employ the cosine scheduler to offer more steps for the initial generation stage:
+
+$$
+t:=1-\cos\left(\frac{1}{2}t\pi\right)
+$$
+
+Besides, we also train the model on both conditional and non-conditional situations to enable the classifier-free guidance (CFG) \cite{ho2022classifier,nichol2021improved,le2024voicebox} at the inference stage:
+
+$$
+\begin{aligned}
+&\tilde{\nu}_t(\phi^{OT}_t(X_0,X_1)|\theta;\Psi)=(1+\beta)\cdot\nu_t(\phi^{OT}_t(X_0,X_1)|\theta;\Psi)-\beta \cdot \nu_t(\phi^{OT}_t(X_0,X_1)|\theta)
+\end{aligned}
+$$
+
+where $\Psi$ denotes the conditions $\{\mathbf{v},\mu,\tilde{X_1}\}$. The CFG strength $\beta$ and the number of flow estimation (NFE) are set to $0.7$ and $10$, respectively, according to the experimental results.
+
+The current flow matching models always work on a offline mode, i.e., only all the speech tokens are generated, the Mel spectrogram can be sampled, which is not friendly for the streaming synthesis.
+To overcome this issue, we treat the multi-step flow estimation as a stacked deeper neural network, which repeats the UNet ten times. Thus, by making the unfolded neural network causal, we can apply it on the streaming synthesis. We construct four masks to satisfy different application situations:
+
+- **Non-causal Mask** is used for offline mode, which can achieve the best performance by attending all frames of conditions. Non-causal mask is suitable for the latency-insensitive situations.
+- **Full-causal Mask** is designed for scenarios required extremely low latency, in which only the past frames can be attended.
+- **Chunk-$M$ Mask** is a trade off between latency and performance, which can leverage the information of the past and $M$ future frames. This mask is more suitable for the first chunk of generation with low latency.
+- **Chunk-$2M$ Mask** can achieve a approximate performance of offline mode by sacrificing more latency, which can be used for the cascade generation chunk for better performance.
+
+For each training case in a mini-batch, we randomly sample a mask from the above four masks under the uniform distribution. In this manner, one flow matching model can be compatible to different scenarios, lowering the deployment complexity. Another advantage of this chunk-aware training is that the masks with more context sever as a teacher for the ones with less context, benefiting from the implicit self-distillation scheme.
+
 ## 3·Methodology: 方法
 
 ## 4·Experiments: 实验
