--- a/Models/SpeechLM/2024.12.13_CosyVoice2.md
+++ b/Models/SpeechLM/2024.12.13_CosyVoice2.md
@@ -3,7 +3,7 @@
 <details>
 <summary>基本信息</summary>
 
-- 标题: "CosyVoice2: Scalable Streaming Speech Synthesis with Large Language Models"
+- 标题: `CosyVoice2: Scalable Streaming Speech Synthesis with Large Language Models`
 - 作者:
   - 01 Zhihao Du
   - 02 Yuxuan Wang
@@ -156,18 +156,18 @@ Similar to other LMs, the text-speech LM is also trained in a next-token-predict
 Different from the previous CosyVoice, we remove the speaker embedding to avoid information leaking. More importantly, we find that such utterance-level vector contains not only speaker identify but also language and paralanguage information, which harms the prosody naturalness and cross-lingual capability of the text-speech LM.
 Besides, we also abandon the text encoder of the previous CosyVoice, since we find that the Qwen2.5-0.5B model is powerful enough to align the text and speech tokens, and the text encoder is no longer needed.
 
-Benefiting from the simplicity of text-speech LM, we can build a unified model for both streaming and non-streaming synthesis. Here, "streaming mode" means the input text is received in a continuous flow rather than being known as a complete sentence in advance. In CosyVoice 2, the difference between streaming and non-streaming modes is only the way of sequence construction for LM:
+Benefiting from the simplicity of text-speech LM, we can build a unified model for both streaming and non-streaming synthesis. Here, `streaming mode` means the input text is received in a continuous flow rather than being known as a complete sentence in advance. In CosyVoice 2, the difference between streaming and non-streaming modes is only the way of sequence construction for LM:
 
-- For the **Non-Streaming** mode, the "start of sequence" \circled{S}, all text tokens, "turn of speech" token \circled{T}, all speech tokens and the "end of sequence" \circled{E} are concatenated sequentially as shown in the bottom of Figure \ref{fig:ULM}. Ignore token means that their losses are ignored while minimizing the cross-entropy objective function.
-- For the **Streaming** mode, we mix up the text and speech tokens in a pre-defined ratio of $N$:$M$, i.e. every $N$ text tokens are followed by $M$ speech tokens seen in the top of Figure \ref{fig:ULM}. If the next token is a text token, the model is expected to predict a filling token (rather than the text token), which indicates that the next $N$ text tokens should be concatenated at the inference stage. Once the text tokens are ran out of, the "turn of speech" token \circled{T} and the remaining speech tokens are concatenated sequentially, forming the hybrid text-speech token sequence in the streaming mode. In our experiments, $N$ and $M$ are set to 5 and 15, respectively.
+- For the **Non-Streaming** mode, the `start of sequence` `\circled{S}`, all text tokens, `turn of speech` token `\circled{T}`, all speech tokens and the `end of sequence` `\circled{E}` are concatenated sequentially as shown in the bottom of Figure \ref{fig:ULM}. Ignore token means that their losses are ignored while minimizing the cross-entropy objective function.
+- For the **Streaming** mode, we mix up the text and speech tokens in a pre-defined ratio of $N$:$M$, i.e. every $N$ text tokens are followed by $M$ speech tokens seen in the top of Figure \ref{fig:ULM}. If the next token is a text token, the model is expected to predict a filling token (rather than the text token), which indicates that the next $N$ text tokens should be concatenated at the inference stage. Once the text tokens are ran out of, the `turn of speech` token `\circled{T}` and the remaining speech tokens are concatenated sequentially, forming the hybrid text-speech token sequence in the streaming mode. In our experiments, $N$ and $M$ are set to 5 and 15, respectively.
 
 By training the text-speech LM on the above two sequences simultaneously, we can perform streaming and non-streaming speech generation within a single unified model.
 In real-life scenarios, such as speaker fine-tuning (SFT) and in-context learning (ICL), the inference sequence differs as follows:
 
-- **ICL, Non-Streaming**: In ICL, the LM requires prompt text and speech tokens from the reference audio to imitate the accent, prosody, emotion and style. In the non-streaming mode, the prompt and to-synthesize text tokens are concatenated as the whole entity, and the prompt speech tokens are treated as the pre-generated results and are fixed: "\circled{**S**}, **prompt\_text**, **text**, \circled{**T**}, **prompt\_speech**". The autoregressive generation of LM is started from such sequence until the "End of sequence" token \circled{E} is detected.
-- **ICL, Streaming**: In this scenario, we assume the to-generate text is already known and the speech tokens should be generated in a streaming manner. Similarly, we treat the prompt and to-generate text as a whole entity. Then, we mix it up with the prompt speech tokens on the ratio of $N$:$M$: "\circled{**S**}, **mixed\_text\_speech**, \circled{**T**}, **remaining\_speech**". If the length of text is greater than that of prompt speech tokens, the LM will generate "filling token". In this situation, we manually pad $N$ text tokens. If the text tokens run out of, the "Turn of speech" token \circled{T} will be added. In the streaming mode, we return generation results every $M$ tokens until the \circled{E} is detected.
-- **SFT, Non-Streaming**: In the SFT scenario, the LM is fine-tuned on a specific speaker, and the prompt text and speech are no longer needed. Thus, the initial sequence is very simple: "\circled{**S**}, **text**, \circled{**T**}". Starting from this, the text-speech LM can generate speech tokens autoregressively until \circled{T}.
-- **SFT, Streaming**: In the streaming mode of SFT, we start the speech generation from the following sequence: "\circled{**S**}, **first\_N\_text**". Then, the LM will generate $M$ speech tokens, and we manually pad the next $N$ text tokens. We repeat the above process until all text tokens run out of, and then \circled{**T**} is added. Note that this mode can also be adopted by the speech-to-speech multi-modal large language models to obtain an extremely low latency.
+- **ICL, Non-Streaming**: In ICL, the LM requires prompt text and speech tokens from the reference audio to imitate the accent, prosody, emotion and style. In the non-streaming mode, the prompt and to-synthesize text tokens are concatenated as the whole entity, and the prompt speech tokens are treated as the pre-generated results and are fixed: `\circled{S}, prompt\_text, text, \circled{T}, prompt\_speech`. The autoregressive generation of LM is started from such sequence until the `End of sequence` token `\circled{E}` is detected.
+- **ICL, Streaming**: In this scenario, we assume the to-generate text is already known and the speech tokens should be generated in a streaming manner. Similarly, we treat the prompt and to-generate text as a whole entity. Then, we mix it up with the prompt speech tokens on the ratio of $N$:$M$: `\circled{S}, mixed\_text\_speech, \circled{T}, remaining\_speech`. If the length of text is greater than that of prompt speech tokens, the LM will generate `filling token`. In this situation, we manually pad $N$ text tokens. If the text tokens run out of, the `Turn of speech` token `\circled{T}` will be added. In the streaming mode, we return generation results every $M$ tokens until the `\circled{E}` is detected.
+- **SFT, Non-Streaming**: In the SFT scenario, the LM is fine-tuned on a specific speaker, and the prompt text and speech are no longer needed. Thus, the initial sequence is very simple: `\circled{S}, text, \circled{T}`. Starting from this, the text-speech LM can generate speech tokens autoregressively until `\circled{T}`.
+- **SFT, Streaming**: In the streaming mode of SFT, we start the speech generation from the following sequence: `\circled{S}, first\_N\_text`. Then, the LM will generate $M$ speech tokens, and we manually pad the next $N$ text tokens. We repeat the above process until all text tokens run out of, and then `\circled{T}` is added. Note that this mode can also be adopted by the speech-to-speech multi-modal large language models to obtain an extremely low latency.
 
 ### Chunk-Aware Flow Matching Model: 分块感知流匹配模型
 
@@ -191,7 +191,7 @@ A causal convolutional Transformer UNet is employed to learn the above ODE with 
 
 $$
 \begin{aligned}
-\nu_t(\phi^{OT}_t(X_0,X_1)|\theta) &= \mathrm{UNet}_\theta\left(\phi^{OT}_t(X_0,X_1),t;\mathbf{v},\{\mu\}_{1:L},\tilde{X_1}\right) \\
+\nu_t(\phi^{OT}_t(X_0,X_1)|\theta) &= \text{UNet}_\theta\left(\phi^{OT}_t(X_0,X_1),t;\mathbf{v},\{\mu\}_{1:L},\tilde{X_1}\right) \\
 \end{aligned}
 $$
 
@@ -227,6 +227,61 @@ To overcome this issue, we treat the multi-step flow estimation as a stacked dee
 - **Chunk-$2M$ Mask** can achieve a approximate performance of offline mode by sacrificing more latency, which can be used for the cascade generation chunk for better performance.
 
 For each training case in a mini-batch, we randomly sample a mask from the above four masks under the uniform distribution. In this manner, one flow matching model can be compatible to different scenarios, lowering the deployment complexity. Another advantage of this chunk-aware training is that the masks with more context sever as a teacher for the ones with less context, benefiting from the implicit self-distillation scheme.
+
+### Latency Analysis for Streaming Mode: 流式模式的延迟分析
+
+The first-package latency is an important metric for streaming synthesis models, which significantly affects the user experience especially in LLM-based voice chat applications, such as GPT-4o \cite{hurst2024gpt}.
+In the context of TTS, the to-synthesize text is known in advance, and the latency comes from the aspects of speech token generation, Mel spectrogram reconstruction and waveform synthesis.
+Thus, the first-package latency $L_{TTS}$ of CosyVoice 2 can be obtained as follows:
+
+$$
+L_{TTS} = M\cdot d_{lm} + M \cdot d_{fm} + M \cdot d_{voc}
+$$
+
+where $d_{lm}$ denotes the computation time of LM to generate one speech token, $d_{fm}$ represents the computation time of Flow Matching model to generate the frames of Mel spectrogram for one speech token and $d_{voc}$ stands for the computation time of vocoder to synthesize waveforms corresponding to one speech token.
+In the context of LLM-based voice chat, the length of first-package-required text should also be considered, and the first-package latency $L_{Chat}$ becomes as follows:
+
+$$
+L_{Chat} \leq N\cdot d_{llm} + L_{TTS}
+$$
+
+where $d_{llm}$ represents the computation time of a LLM to generate one text token. Note that, since the multi-character tokens are masked out in CosyVoice 2's text tokenizer, the text tokens used by text LLMs always encode longer raw text than those of CosyVoice 2. Thus, the the first-package latency $L_{Chat}$ must be lower than the summation of $N\cdot d_{llm}$ and $L_{TTS}$.
+
+### Instructed Generation: 指令生成
+
+To enhance the controllability of CosyVoice 2, we integrated the instructed dataset into the base training set. We have collected 1500 hours of instructed training data, which includes both natural language instructions and fine-grained instructions, as outlined in Table \ref{tab:example_instruct}. For natural language instructions, we prepend a natural language description and a special end token, `<|endofprompt|>` before the to-synthesize input text. These descriptions cover aspects such as emotion, speaking rate, role-playing, and dialects. For fine-grained instructions, we insert vocal bursts between text tokens, using markers like `[laughter]` and `[breath]`. Additionally, we apply vocal feature tags to phrases; for instance, `<strong>XXX</strong>` indicates emphasis on certain words, while `<laughter>XXX</laughter>` signifies speaking with laughter.
+
+### Multi-Speaker Fine-tuning: 多说话人微调
+
+Fine-tuning the pre-trained model on specific speakers (SFT) can further improve the generation quality and speaker similarity. In this report, we introduce the multi-speaker fine-tuning (mSFT), in which the pretrained model is fine-tuned on multiply speakers simultaneously rather than a single speaker. This approach ensures comprehensive prosody and pronunciation coverage across multiple speakers and mitigates potential catastrophic forgetting from the pretrained models. To avoid timbre confusion between various speakers, we prepend speaker-prompt tags, `Speaker A<|endofprompt|>` to the input text for a specific speaker. If a training sample is not labeled to a speaker, a special tag, `unknown<|endofprompt|>`, is utlized.
+The learning rate is set to 1e-5 during the whole multi-speaker fine-tuning process.
+
+### Reinforcement Learning for SFT: 强化学习用于监督式微调
+
+Reinforcement learning is a commonly used method in the training of large language models, which can make the LM output align with human preference.
+In CosyVoice 2, we employ speaker similarity (SS) and recognition word error rate (WER) from the ASR system as the reward function to improve speaker similarity and pronunciation accuracy in the fine-tuning stage. We use WER and SS to distinguish preferred sample $x^w$ and rejected samples $x^l$ and optimize the TTS system with direct preference optimization (DPO) \cite{DBLP:conf/nips/RafailovSMMEF23} as follow:
+
+$$
+L_{DPO}(\pi_\theta; \pi_{\text{ref}}) = -\log \sigma(\beta \log \frac{\pi_\theta(\mu^w | y)}{\pi_{\text{ref}}(\mu^w | y)} - \beta \log \frac{\pi_\theta(\mu^l | y)}{\pi_{\text{ref}}(\mu^l | y)})
+$$
+
+where $\mu^w$ and $\mu^l$ are the speech token extracted from the preferred and rejected samples $x^w$ and $x^l$.
+
+However, this method is time-consuming and computation-consuming as it should synthesis the audios through the TTS system repeatedly to obtain distinguishable preference and rejected samples. During training, four forward operations are needed for one training step.
+To simplify the process, we recover the LM predicted token $\mu_i \in \{0, 1, \dots, (2K+1)^D-1\}$  into quantized low-rank representations $\bar{H}$, and directly use the ASR backend of the speech tokenizer to re-predict the input text. Then the predicted log posterior can be regarded as the ASR reward function to optimize the text-speech language model. During training, the ASR backend parameters are frozen.
+
+$$
+\bar{h}_{i,j} = \left\lfloor \frac{\mu_i}{(2K+1)^j} \right\rfloor \mod (2K+1)
+$$
+
+$$
+\begin{aligned}
+  \hat{H} &= \text{Proj}_{up}(\bar{H}) \\
+  L_{ASR} &= -\log P(Y | \hat{H}; \theta_{ASR})
+\end{aligned}
+$$
+
+where $Y$ is the input text, and $\bar{H}$ are the recovered speech low-rank representations. As the sample operation of the  $u_i \sim P(\mu_i|\mu_{1:i-1}, Y; \theta_{LM})$ still prevent us to optimize the model directly, we use the gumbel softmax sampling to make it differentiated and then optimize the $\theta_{LM}$ by the $\mathcal{L}_{ASR}$.
 
 ## 3·Methodology: 方法
 
