--- a/Models/SpeechLM/2024.12.13_CosyVoice2.md
+++ b/Models/SpeechLM/2024.12.13_CosyVoice2.md
@@ -115,17 +115,19 @@ In addition, the chunk-aware flow matching design can also be applied to NAR TTS
 
 ## 2·Related Works: 相关工作
 
+## 3·Methodology: 方法
+
 <details>
 <summary>展开原文</summary>
 
-CosyVoice 2 builds on the similar design philosophy of its predecessor \cite{cosyvoice} by separating the semantic and acoustic information of speech signals and modeling them independently. The speech generation process is redefined as a gradual semantic decoding procedure, where conditional information is progressively incorporated. Specifically, the text-speech language model (LM) focuses solely on semantic information, decoding high-level text tokens into supervised semantic speech tokens. In the Flow Matching model, acoustic details, such as timbre, are introduced through speaker embeddings and reference speech, converting speech tokens into the Mel spectrum for a given speaker. Finally, a pre-trained vocoder model reinstates the phases, transforming the Mel spectrum back into the original audio signal. The following sections will introduce the details of CosyVoice 2 and the modifications for streaming synthesis from five respects: text tokenizer, supervised semantic speech tokenizer, unified text-speech LM for streaming/non-streaming synthesis and chunk-aware Flow Matching model. Figure \ref{fig:overall} provides an overview of CosyVoice 2.
+CosyVoice2 builds on the similar design philosophy of its predecessor \cite{cosyvoice} by separating the semantic and acoustic information of speech signals and modeling them independently. The speech generation process is redefined as a gradual semantic decoding procedure, where conditional information is progressively incorporated. Specifically, the text-speech language model (LM) focuses solely on semantic information, decoding high-level text tokens into supervised semantic speech tokens. In the Flow Matching model, acoustic details, such as timbre, are introduced through speaker embeddings and reference speech, converting speech tokens into the Mel spectrum for a given speaker. Finally, a pre-trained vocoder model reinstates the phases, transforming the Mel spectrum back into the original audio signal. The following sections will introduce the details of CosyVoice2 and the modifications for streaming synthesis from five respects: text tokenizer, supervised semantic speech tokenizer, unified text-speech LM for streaming/non-streaming synthesis and chunk-aware Flow Matching model. Figure \ref{fig:overall} provides an overview of CosyVoice2.
 
 </details>
 <br>
 
 ### Text Tokenizer: 文本分词器
 
-CosyVoice 2 uses the raw text as input directly, which is tokenized using a BPE-based text tokenizer. This eliminates the need for a frontend model that obtains phonemes via the grapheme-to-phoneme (g2p) transformation. This approach not only simplifies the data preprocessing workflow but also enables the model to learn the pronunciations of words within various contexts in an end-to-end manner. Unlike the tokenizers commonly used in textual LLMs, CosyVoice 2 masks out the one-to-many tokens. This prevents the pronunciation of a token from becoming excessively long and reduces corner cases caused by data sparsity. Specifically, if a BPE token encodes more than one Chinese character, it will be masked out, and each character will be encoded separately during the tokenization process. Other languages, such as English, Japanese, and Korean, are not subject to special handling.
+CosyVoice2 uses the raw text as input directly, which is tokenized using a BPE-based text tokenizer. This eliminates the need for a frontend model that obtains phonemes via the grapheme-to-phoneme (g2p) transformation. This approach not only simplifies the data preprocessing workflow but also enables the model to learn the pronunciations of words within various contexts in an end-to-end manner. Unlike the tokenizers commonly used in textual LLMs, CosyVoice2 masks out the one-to-many tokens. This prevents the pronunciation of a token from becoming excessively long and reduces corner cases caused by data sparsity. Specifically, if a BPE token encodes more than one Chinese character, it will be masked out, and each character will be encoded separately during the tokenization process. Other languages, such as English, Japanese, and Korean, are not subject to special handling.
 
 ### Supervised Semantic Speech Tokenizer: 监督式语义语音分词器
 
@@ -147,16 +149,16 @@ $$
 \mu_i = \sum_{j=0}^{D-1}{\bar{h}_{i,j}(2K+1)^{j}}
 $$
 
-The $\text{Encoder}_1$, low-rank projector of FSQ module, bounded round operation and index calculation form the speech tokenizer for CosyVoice 2. Our speech tokenizer works at a token rate of 25 Hz, i.e., 25 speech tokens per second.
+The $\text{Encoder}_1$, low-rank projector of FSQ module, bounded round operation and index calculation form the speech tokenizer for CosyVoice2. Our speech tokenizer works at a token rate of 25 Hz, i.e., 25 speech tokens per second.
 
 ### Unified Text-Speech Language Model: 统一的文本-语音语言模型
 
-In CosyVoice 2, the pre-trained textual LLM, Qwen2.5-0.5B \cite{qwen2.5}, is used as the text-speech language model to generate the speech tokens autoregressively with the input text as a prompt.
+In CosyVoice2, the pre-trained textual LLM, Qwen2.5-0.5B \cite{qwen2.5}, is used as the text-speech language model to generate the speech tokens autoregressively with the input text as a prompt.
 Similar to other LMs, the text-speech LM is also trained in a next-token-prediction scheme as shown in Figure \ref{fig:overall} (b).
 Different from the previous CosyVoice, we remove the speaker embedding to avoid information leaking. More importantly, we find that such utterance-level vector contains not only speaker identify but also language and paralanguage information, which harms the prosody naturalness and cross-lingual capability of the text-speech LM.
 Besides, we also abandon the text encoder of the previous CosyVoice, since we find that the Qwen2.5-0.5B model is powerful enough to align the text and speech tokens, and the text encoder is no longer needed.
 
-Benefiting from the simplicity of text-speech LM, we can build a unified model for both streaming and non-streaming synthesis. Here, `streaming mode` means the input text is received in a continuous flow rather than being known as a complete sentence in advance. In CosyVoice 2, the difference between streaming and non-streaming modes is only the way of sequence construction for LM:
+Benefiting from the simplicity of text-speech LM, we can build a unified model for both streaming and non-streaming synthesis. Here, `streaming mode` means the input text is received in a continuous flow rather than being known as a complete sentence in advance. In CosyVoice2, the difference between streaming and non-streaming modes is only the way of sequence construction for LM:
 
 - For the **Non-Streaming** mode, the `start of sequence` `\circled{S}`, all text tokens, `turn of speech` token `\circled{T}`, all speech tokens and the `end of sequence` `\circled{E}` are concatenated sequentially as shown in the bottom of Figure \ref{fig:ULM}. Ignore token means that their losses are ignored while minimizing the cross-entropy objective function.
 - For the **Streaming** mode, we mix up the text and speech tokens in a pre-defined ratio of $N$:$M$, i.e. every $N$ text tokens are followed by $M$ speech tokens seen in the top of Figure \ref{fig:ULM}. If the next token is a text token, the model is expected to predict a filling token (rather than the text token), which indicates that the next $N$ text tokens should be concatenated at the inference stage. Once the text tokens are ran out of, the `turn of speech` token `\circled{T}` and the remaining speech tokens are concatenated sequentially, forming the hybrid text-speech token sequence in the streaming mode. In our experiments, $N$ and $M$ are set to 5 and 15, respectively.
@@ -171,7 +173,7 @@ In real-life scenarios, such as speaker fine-tuning (SFT) and in-context learnin
 
 ### Chunk-Aware Flow Matching Model: 分块感知流匹配模型
 
-In CosyVoice 2, we employ the Mel spectrogram as the acoustic feature with the frame rate of 50 Hz and the sampling rate of 24000. Due the frame-rate mismatch between speech tokens and Mel features, we up-sample the speech tokens with the ratio of two to match the frame rate of Mel spectrogram. Before the up-sampling operation, we add an additional look-ahead convolution layer to provide the future information for the following causal modules. The look-ahead layer is implemented by a right-padded 1-D convolution with the pad size of $P$ and the kernel size of $P+1$. After these, several chunk-aware causal Transformer blocks are followed to align the representation space of speech tokens to match acoustic features.
+In CosyVoice2, we employ the Mel spectrogram as the acoustic feature with the frame rate of 50 Hz and the sampling rate of 24000. Due the frame-rate mismatch between speech tokens and Mel features, we up-sample the speech tokens with the ratio of two to match the frame rate of Mel spectrogram. Before the up-sampling operation, we add an additional look-ahead convolution layer to provide the future information for the following causal modules. The look-ahead layer is implemented by a right-padded 1-D convolution with the pad size of $P$ and the kernel size of $P+1$. After these, several chunk-aware causal Transformer blocks are followed to align the representation space of speech tokens to match acoustic features.
 
 Subsequently, our goal is to further decode the speech tokens into the Mel spectrogram specified by the speaker embedding and reference speech.
 To achieve this, we employ a conditional flow matching (CFM) model to sample the Mel spectrogram, given speech tokens, reference speech and speaker embedding as conditions.
@@ -232,7 +234,7 @@ For each training case in a mini-batch, we randomly sample a mask from the above
 
 The first-package latency is an important metric for streaming synthesis models, which significantly affects the user experience especially in LLM-based voice chat applications, such as GPT-4o \cite{hurst2024gpt}.
 In the context of TTS, the to-synthesize text is known in advance, and the latency comes from the aspects of speech token generation, Mel spectrogram reconstruction and waveform synthesis.
-Thus, the first-package latency $L_{TTS}$ of CosyVoice 2 can be obtained as follows:
+Thus, the first-package latency $L_{TTS}$ of CosyVoice2 can be obtained as follows:
 
 $$
 L_{TTS} = M\cdot d_{lm} + M \cdot d_{fm} + M \cdot d_{voc}
@@ -245,11 +247,11 @@ $$
 L_{Chat} \leq N\cdot d_{llm} + L_{TTS}
 $$
 
-where $d_{llm}$ represents the computation time of a LLM to generate one text token. Note that, since the multi-character tokens are masked out in CosyVoice 2's text tokenizer, the text tokens used by text LLMs always encode longer raw text than those of CosyVoice 2. Thus, the the first-package latency $L_{Chat}$ must be lower than the summation of $N\cdot d_{llm}$ and $L_{TTS}$.
+where $d_{llm}$ represents the computation time of a LLM to generate one text token. Note that, since the multi-character tokens are masked out in CosyVoice2's text tokenizer, the text tokens used by text LLMs always encode longer raw text than those of CosyVoice2. Thus, the the first-package latency $L_{Chat}$ must be lower than the summation of $N\cdot d_{llm}$ and $L_{TTS}$.
 
 ### Instructed Generation: 指令生成
 
-To enhance the controllability of CosyVoice 2, we integrated the instructed dataset into the base training set. We have collected 1500 hours of instructed training data, which includes both natural language instructions and fine-grained instructions, as outlined in Table \ref{tab:example_instruct}. For natural language instructions, we prepend a natural language description and a special end token, `<|endofprompt|>` before the to-synthesize input text. These descriptions cover aspects such as emotion, speaking rate, role-playing, and dialects. For fine-grained instructions, we insert vocal bursts between text tokens, using markers like `[laughter]` and `[breath]`. Additionally, we apply vocal feature tags to phrases; for instance, `<strong>XXX</strong>` indicates emphasis on certain words, while `<laughter>XXX</laughter>` signifies speaking with laughter.
+To enhance the controllability of CosyVoice2, we integrated the instructed dataset into the base training set. We have collected 1500 hours of instructed training data, which includes both natural language instructions and fine-grained instructions, as outlined in Table \ref{tab:example_instruct}. For natural language instructions, we prepend a natural language description and a special end token, `<|endofprompt|>` before the to-synthesize input text. These descriptions cover aspects such as emotion, speaking rate, role-playing, and dialects. For fine-grained instructions, we insert vocal bursts between text tokens, using markers like `[laughter]` and `[breath]`. Additionally, we apply vocal feature tags to phrases; for instance, `<strong>XXX</strong>` indicates emphasis on certain words, while `<laughter>XXX</laughter>` signifies speaking with laughter.
 
 ### Multi-Speaker Fine-tuning: 多说话人微调
 
@@ -259,7 +261,7 @@ The learning rate is set to 1e-5 during the whole multi-speaker fine-tuning proc
 ### Reinforcement Learning for SFT: 强化学习用于监督式微调
 
 Reinforcement learning is a commonly used method in the training of large language models, which can make the LM output align with human preference.
-In CosyVoice 2, we employ speaker similarity (SS) and recognition word error rate (WER) from the ASR system as the reward function to improve speaker similarity and pronunciation accuracy in the fine-tuning stage. We use WER and SS to distinguish preferred sample $x^w$ and rejected samples $x^l$ and optimize the TTS system with direct preference optimization (DPO) \cite{DBLP:conf/nips/RafailovSMMEF23} as follow:
+In CosyVoice2, we employ speaker similarity (SS) and recognition word error rate (WER) from the ASR system as the reward function to improve speaker similarity and pronunciation accuracy in the fine-tuning stage. We use WER and SS to distinguish preferred sample $x^w$ and rejected samples $x^l$ and optimize the TTS system with direct preference optimization (DPO) \cite{DBLP:conf/nips/RafailovSMMEF23} as follow:
 
 $$
 L_{DPO}(\pi_\theta; \pi_{\text{ref}}) = -\log \sigma(\beta \log \frac{\pi_\theta(\mu^w | y)}{\pi_{\text{ref}}(\mu^w | y)} - \beta \log \frac{\pi_\theta(\mu^l | y)}{\pi_{\text{ref}}(\mu^l | y)})
@@ -283,9 +285,34 @@ $$
 
 where $Y$ is the input text, and $\bar{H}$ are the recovered speech low-rank representations. As the sample operation of the  $u_i \sim P(\mu_i|\mu_{1:i-1}, Y; \theta_{LM})$ still prevent us to optimize the model directly, we use the gumbel softmax sampling to make it differentiated and then optimize the $\theta_{LM}$ by the $\mathcal{L}_{ASR}$.
 
-## 3·Methodology: 方法
-
 ## 4·Experiments: 实验
+
+### Training Data for Speech Tokenizer: 语音分词器的训练数据
+
+A 200,000-hour dataset is used to train the speech tokenizer with normalized transcriptions as labels. Detailed data information is listed in Table~\ref{tab:fsqdata}. The training data comes from three different resources: open source ASR datasets, internal industrial datasets and TTS generation datasets. Although we only used Chinese and English data when training the speech tokenizer, as shown in Table ~\ref{tab:fsqdata}, subsequent experiments revealed that the speech tokenizer had zero-shot capability for other languages. It can be also used for speech synthesis in languages such as Japanese and Korean.
+
+### Training Data for CosyVoice2: CosyVoice2 的训练数据
+
+CosyVoice2 shares the same training data as its previous version \cite{cosyvoice}.
+We first collect the speech-only data with internal speech processing tools.
+Subsequently, the Paraformer \cite{DBLP:conf/interspeech/GaoZ0Y22} and SenseVoice \cite{funaduiollm} are employed to generate pseudo text labels for Chinese and other languages, respectively. We also employ an internal force-alignment model to filter out low-quality data and enhances the accuracy of punctuation. Data details are provided in Table \ref{tab:cv_data}.
+
+### Evaluation Settings: 评估设置
+
+We evaluate our CosyVoice2 on two test sets. The first one is constructed from the test-clean set of Librispeech corpus \cite{DBLP:conf/aaai/DuGSLLCWZ024}, denoted as \emph{test-clean}. This test set is used to evaluate CosyVoice2 on a limited English domain. The Whisper-large V3 is used as the ASR model to evaluate the content consistency. As for the speaker similarity (SS), we employ the ERes2Net model \cite{eres2net} to extract speaker embeddings of prompt and generated utterances, and their raw cosine similarity is treated as the speaker similarity.
+NMOS score \cite{DBLP:conf/icassp/ReddyGC22} is used to evaluate the objective quality.
+
+The second evaluation is conducted on the SEED test sets \cite{DBLP:journals/corr/abs-2406-02430}, which is widely used to evaluate recent TTS models, covering various text domains and reference speeches. In this evaluation, about 2,000 Chinese and 1,000 English samples are selected from CommonVoice datasets, denoted as \emph{test-zh} and \emph{test-en}, respectively. In addition, about 400 hard test cases are also included to evaluate the robustness of TTS models on text repetition, tongue twister and other challenging synthesis cases, denoted as \emph{test-hard} in this report. The Paraformer is employed to recognize the synthesis results of \emph{test-zh} and \emph{test-hard}, while the Whisper-large V3 is adopted for \emph{test-en} to evaluate the content consistency. We adopt two speaker verification (SV) models to evaluate speaker similarity: WavLM-finetuned SV model and ERes2Net.
+
+### Benchmark for Japanese and Korean: 日语和韩语的基准
+
+We prepare two test sets, denoted as \emph{test-ja} and \emph{test-ko}, for the evaluation on Japanese and Korean speech synthesis.
+The \emph{test-ja} consists 1,000 samples extracted from the CommonVoice dataset, which are used to measure the model’s performance on various metrics, such as WER, SS, MOS.
+Specifically, we randomly shuffle and pair the entire CommonVoice JA-test set as reference utterance and target utterance spoken.
+Considering the wide range of utterances' text lengths of JA-test set, we randomly selected 1,000 pairs of reference-target utterances from the length range from 8 to 32 characters as our final test set.
+For the \emph{test-ko}, we selected 1,000 speech samples with a WER of less than 5\% and no deletion or insertion errors, utilizing the Whisper-Large V3 \cite{DBLP:conf/icml/RadfordKXBMS23} as the ASR model. These samples were used as reference utterances for the Korean speech synthesis. For the input text, we randomly selected 1,000 text samples from the remaining data.
+We have released the lists of prompt speeches, prompt transcriptions and input text from these two test sets are released to facilitate result reproduction. By providing this open-source data, we aim to establish a benchmark for evaluating Japanese and Korean TTS models.
+The Whisper-large V3 is used as the ASR model for Japanese and Korean evaluations.
 
 ## 5·Results: 结果
 
