--- a/Models/SpeechLM/2024.12.13_CosyVoice2.md
+++ b/Models/SpeechLM/2024.12.13_CosyVoice2.md
@@ -364,3 +364,9 @@ This means that the differentiable ASR reward has a better generalization abilit
 Finally, we can combine them with each other for further improvements.
 
 ## 6·Conclusions: 结论
+
+Building on the success of CosyVoice, this report presents CosyVoice2, an improved streaming speech synthesis model that leverages large language models. By unifying streaming and non-streaming synthesis within a single framework, CosyVoice2 achieves human-parity naturalness, minimal response latency, and virtually lossless synthesis quality in streaming mode. Key innovations include finite scalar quantization for full codebook utilization, a simplified text-to-speech language model architecture that incorporates pre-trained textual LLMs, and the development of a chunk-aware causal flow matching model to support diverse synthesis scenarios. Additionally, improvements in instructed TTS capacity allow for versatile and vivid speech generation with fine-grained control over emotion, accent, role style, and vocal bursts. Through systematic modifications and optimizations, CosyVoice2 not only delivers superior synthesis quality but also loosens deployment requirements, making it suitable for both streaming and non-streaming applications. We believe that CosyVoice2 represents a significant advancement in scalable, high-quality, and interactive text-to-speech synthesis.
+
+### Limitations: 局限性
+
+CosyVoice2 has several limitations that need to be addressed. First, it supports only a limited number of languages. For languages with overlapping character sets, synthesis performance may degrade, presenting an open challenge for future research. Second, CosyVoice2 cannot control acoustic characteristics, such as timbre, through textual instructions, which could be a fascinating area of exploration for role-playing applications. Additionally, CosyVoice does not perform well when tasked with singing.
