update KALL-E result

--- a/Models/SpeechLM/2024.12.22_KALL-E.md
+++ b/Models/SpeechLM/2024.12.22_KALL-E.md
@@ -187,4 +187,18 @@ For SIM, we employ WavLM-large~\cite{wavlm} fine-tuned on a speaker verification
 
 ## 5·Results: 结果
 
+### Zero-shot TTS
+
+As shown in Table~\ref{tab:zero-shot_tts}, KALL-E outperforms YourTTS, VALL-E, NaturalSpeech 2, and CosyVoice in MOS, demonstrating its ability to synthesize highly natural speech in zero-shot scenarios. Moreover, KALL-E surpasses these systems by a notable margin in SMOS, highlighting its superior capability in cloning speaker timbre and other speech characteristics. This advantage can be attributed to the use of continuous speech distributions, which capture finer-grained acoustic details compared to discrete representations used in comparison systems.
+
+In objective evaluations, CosyVoice achieves the best WER, with KALL-E obtaining a higher WER compared to CosyVoice and NaturalSpeech 2. This discrepancy is likely due to occasional issues in KALL-E’s generated speech, such as missed or duplicated words, pointing to areas where synthesis robustness can be further improved. Despite this, KALL-E achieves the highest SIM among all systems, corroborating its strength in zero-shot voice cloning and aligning with subjective evaluation results.
+
+### Zero-shot Emotion and Accent Cloning
+
+To further assess the zero-shot capabilities of KALL-E, we conduct experiments on emotion cloning and accent cloning. As shown in Table~\ref{tab:esd_tts}, all comparison models exhibit performance degradation in zero-shot emotional voice cloning, underscoring the inherent challenge of this task. However, KALL-E demonstrates superior performance compared to its results on the LibriTTS test-clean set. This observation highlights the richness of continuous speech distributions in capturing acoustic details. Notably, the CMOS results indicate that KALL-E achieves the best performance in zero-shot emotion cloning among all models.
+
+In zero-shot accent cloning, as depicted in Table~\ref{tab:vctk_tts}, NaturalSpeech 2 and CosyVoice achieve low WER, whereas YourTTS, VALL-E, and KALL-E exhibit relatively higher WER. We find that accented pronunciation adversely affects the clarity of synthetic speech produced by YourTTS, VALL-E, and KALL-E. Despite this, KALL-E achieves the best results in accent preference as reflected in CMOS evaluations. Furthermore, KALL-E records the highest SIM score, affirming its effectiveness in preserving speaker timbre during zero-shot accent cloning.
+
+Additionally, KALL-E can generate diverse speech with various speaker timbres and speaking styles in an unconditional TTS manner. We show this ability on our online demo page.
+
 ## 6·Conclusions: 结论
